tests/paczka1/fuzzy1/58931115.err
Error in line 10: zTayAjGd S895 125,A
Error in line 12: nXfSqIxg S863 76,1
Error in line 5: zTayAjGd S895 29,1
Error in line 20: zTayAjGd S863 38,9
Error in line 21: zTayAjGd S565 83,7
Error in line 19: A819 S895 35,0
Error in line 32: 4SfZ A819 53,6
Error in line 39: zTayAjGd S863 84,9
